--- a/layouts/partials/structured-data.html
+++ b/layouts/partials/structured-data.html
@@ -52,10 +52,10 @@
       "image": "https://jgo.vn/wp-content/uploads/2022/11/jgo-logo.png",
       "@id": "https://jgo.vn/",
       "url": "https://jgo.vn/",
-      "telephone": "0944972123",
+      "telephone": "0942259111",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Lô 41 KĐT Ven Sông, Ngũ Hành Sơn, Đà Nẵng, Việt Nam",
+        "streetAddress": "Lô 41, Bờ Quan 12, Ngũ Hành Sơn, Đà Nẵng, Việt Nam",
         "addressLocality": "Đà Nẵng",
         "postalCode": "550000",
         "addressCountry": "VN"
