--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -34,7 +34,7 @@
               <p>
                 {{ .description2 }}
               </p>
-              <a href="#" data-text={{ .buttonText }} class="btn btn-primary">
+              <a href="https://zalo.me/0944972123" data-text={{ .buttonText }} class="btn btn-primary">
                 <span>{{ .buttonText }}</span>
               </a>
             </div>
