--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,5 +1,6 @@
 //@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700");
+//@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700");
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 body {
   font-family: $primary-font;
