--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         <form action="#" class="footer-subscribe-form">
           <div class="from-group">
             <div class="input-group">
-              <input type="email" class="form-control" placeholder="Enter Your E-mail">
+              <input type="email" class="form-control" placeholder="Điền E-mail của bạn">
               <div class="subscribe">
                 <button class="btn btn-subscribe" type="submit">
                   <span class="btn-area">
@@ -81,7 +81,7 @@
       </div>
       <div class="col-lg-4 col-md-4">
         <div class="footer-widget">
-          <h4>Address</h4>
+          <h4>Liên Hệ</h4>
           {{ $address := .Site.Params.address }}
           <div class="footer-widget-list">
             <ul>
